tests/purs/failing/4483.out
Error found:
at tests/purs/failing/4483.purs:10:1 - 11:24 (line 10, column 1 - line 11, column 24)

  The following type class members have not been implemented:
  [33mbar :: Int -> Int[0m

in type class instance
[33m              [0m
[33m  Main.Foo Int[0m
[33m              [0m

See https://github.com/purescript/documentation/blob/master/errors/MissingClassMember.md for more information,
or to contribute content related to this error.

